fixed stupid title I missed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Freelance Full-Stack Web Developer and Unreal Game Developer.">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Michael Ikonomou</title>
   </head>
   <body>
     <div id="root"></div>
